<package>
 <name>ras_group8_launch</name>
  <version>0.2.0</version>
  <description>
    Launch package.
  </description>
  <license>BSD</license>

  <url type="website">https://github.com/RAS17-Group-8/ras_group8_launch</url>

  <author email="seb.lindberg@gmail.com">Sebastian Lindberg</author>
  <maintainer email="seb.lindberg@gmail.com">Sebastian Lindberg</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>ras_group8_platform</run_depend>
  <run_depend>ras_group8_motor_controller</run_depend>
</package>
